--- a/back/package.json
+++ b/back/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "piiquante",
+  "name": "back",
   "version": "1.0.0",
-  "description": "backend pour le P6 Piiquante",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "^2.0.15"
+  },
+  "repository": {
+    "type": "git",
+    "url": "Piiquante"
+  },
+  "description": ""
 }
