--- a/back/package.json
+++ b/back/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "back",
+  "name": "piiquante-back",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
+    "mongoose": "^6.2.1",
     "nodemon": "^2.0.15"
   },
   "repository": {
     "type": "git",
     "url": "Piiquante"
   },
-  "description": ""
+  "devDependencies": {},
+  "description": "backend pour le projet 6 Piiquante"
 }
