--- a/back/package.json
+++ b/back/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
@@ -18,6 +19,6 @@
     "type": "git",
     "url": "Piiquante"
   },
-  "devDependencies": {},
-  "description": "backend pour le projet 6 Piiquante"
+  "description": "backend pour le projet 6 Piiquante",
+  "devDependencies": {}
 }
