--- a/back/package.json
+++ b/back/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.4",
+    "mongoose": "^6.2.5",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15"
@@ -23,6 +23,5 @@
     "type": "git",
     "url": "Piiquante"
   },
-  "description": "backend pour le projet 6 Piiquante",
-  "devDependencies": {}
+  "description": "backend pour le projet 6 Piiquante"
 }
